# mcp-defender

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  server.json
src/mcp_defender/: __init__.py  server.py
tests/: __init__.py  test_server.py
