[project]
name = "mcp-msdefenderkql"
version = "1.0.0"
description = "MCP server for Microsoft Defender Advanced Hunting - execute KQL queries via natural language"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "trickyfalcon", email = "trickyfalcon@users.noreply.github.com" }
]
keywords = [
    "mcp",
    "model-context-protocol",
    "microsoft-defender",
    "advanced-hunting",
    "kql",
    "security",
    "siem",
    "threat-hunting",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "mcp>=1.0.0",
    "azure-identity>=1.15.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/trickyfalcon/mcp-defender"
Repository = "https://github.com/trickyfalcon/mcp-defender"
Issues = "https://github.com/trickyfalcon/mcp-defender/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "bandit>=1.7.0",
]

[project.scripts]
mcp-msdefenderkql = "mcp_defender.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_defender"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
